package org.qut;

/**
 * Application entrypoint
 */
public class Main {
    public static void main(String[] args) {
        // OOP is such a _BAD_ abstraction technique
        new MyFrameLayout();
    }
}
