package org.qut;

/**
 * Coordinate object for doubles. No generics in existing java coords
 */
public class MyCoordinate {
    private double x, y;

    public MyCoordinate(double x, double y) {
        this.x = x;
        this.y = y;
    }

    public void setXY(double x, double y) {
        this.x = x;
        this.y = y;
    }

    public double getX() {
        return x;
    }

    public void setX(double x) {
        this.x = x;
    }

    public double getY() {
        return y;
    }

    public void setY(double y) {
        this.y = y;
    }
}
