@startuml

title __QUT's Class Diagram__\n

  package org.qut {
    class Main {
        {static} + main()
    }
  }
  

  package org.qut {
    class MyCanvas {
        - drawCommands : ArrayList<String>
        + curPolygonCoords : String
        + penColor : Color
        + fillColor : Color
        + curFillShape : boolean
        + MyCanvas()
        + resetCommands()
        + addCommand()
        + undoLastCommand()
        + getCommands()
        - penRGB2HEX()
        - fillRGB2HEX()
        - scaleX2WinWidth()
        - scaleX2WinWidth()
        - scaleY2WinHeight()
        - scaleY2WinHeight()
        - normalizeX()
        - normalizeY()
        + paintComponent()
        + mousePressed()
        + mouseReleased()
        + mouseEntered()
        + mouseDragged()
        + mouseMoved()
        + mouseExited()
        + mouseClicked()
        + getDrawCommands()
    }
  }
  

  package org.qut {
    class MyCanvasTest {
        {static} - CANVAS : MyCanvas
        ~ resetCommands()
        ~ addCommand()
        ~ undoLastCommand()
        ~ getCommands()
    }
  }
  

  package org.qut {
    class MyCoordinate {
        - x : double
        - y : double
        + MyCoordinate()
        + setXY()
        + getX()
        + setX()
        + getY()
        + setY()
    }
  }
  

  package org.qut {
    class MyCoordinateTest {
        {static} - MY_COORDINATE : MyCoordinate
        ~ setXY()
        ~ getX()
        ~ setX()
        ~ getY()
        ~ setY()
    }
  }
  

  package org.qut {
    class MyFrameComponentFactory {
        {static} + createToolButton()
        {static} + createColorPickerJButton()
        {static} + createJSeperator()
    }
  }
  

  package org.qut {
    class MyFrameComponentFactoryTest {
        ~ createToolButton()
        ~ createColorPickerJButton()
        ~ createJSeperator()
    }
  }
  

  package org.qut {
    class MyFrameLayout {
        - width : int
        - height : int
        - frame : JFrame
        - btnEllipse : JButton
        - btnPolygon : JButton
        - btnRectangle : JButton
        - btnLine : JButton
        - btnPlot : JButton
        - penColorBtn : JButton
        - fillColorBtn : JButton
        + MyFrameLayout()
        + createMenuBar()
        + createDrawFrame()
        + createHUD()
        - exportCanvasAsBMP()
        - saveToVecFile()
        - loadVecFile()
        - deselectToolButtons()
        - selectToolButton()
    }
  }
  

  package org.qut {
    class MyShape {
    }
  }
  

  package org.qut {
    enum Shape {
      RECTANGLE
      POLYGON
      ELLIPSE
      POINT
      LINE
    }
  }
  

  package org.qut {
    class MyShapeTest {
    }
  }
  

  MyCanvas -up-|> MouseListener
  MyCanvas -up-|> MouseMotionListener
  MyCanvas o-- Shape : curDrawShape
  MyCanvas o-- MyCoordinate : mouseMovedC
  MyCanvas o-- MyCoordinate : mousePressedC
  MyCanvas o-- MyCoordinate : mouseDraggedC
  MyFrameLayout o-- MyCanvas : canvas
  MyShape +-down- Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
